new setup.py to replace prefix template and to use a .ini file

--- a/data/regate.ini
+++ b/data/regate.ini
@@ -1,27 +1,32 @@
 [galaxy_server]
 # url to the analyze galaxy instance
-galaxy_url:
+galaxy_url =
 # galaxy user api key
-api_key:
+api_key =
+# default tool list
+tools_default =
 
 [regate_specific_section]
 # collection name matchine the galaxy url
-collection_name:
+collection_name =
 
 # registry login
-login:
-# import all JSON to ELIXIR bioregistry
-pushtoelixir:
-# import all JSON to ELIXIR bioregistry of an already exist specified directory
-onlypush:
+login =
+# import all XML to ELIXIR bioregistry
+pushtoelixir =
+# import all XML to ELIXIR bioregistry of an already exist specified directory
+onlypush =
 
 # directory to store the tool json
-tool_dir:
+tool_dir =
+
+#XML template for ELIXI registry
+#xmltemplate =
 
 [remag_specific_section]
 # edam owl file to create
-edam_file:
+edam_file =
 # output file format yaml
-output_yaml:
+#output_yaml =
 
 
