--- a/data/yaml_mapping.yaml
+++ b/data/yaml_mapping.yaml
@@ -61,6 +61,9 @@ bigwig:
 - EDAM_format:3006
 - EDAM_data:3002
 - EDAM_data:0006
+biom1:
+- EDAM_format:3464
+- EDAM_data:0006
 bmp:
 - EDAM_format:3547
 - EDAM_data:2968
@@ -117,6 +120,10 @@ cpgreport:
 - EDAM_data:0006
 cps:
 - EDAM_format:2333
+- EDAM_data:0006
+cram:
+- EDAM_format:3462
+- EDAM_data:1381
 - EDAM_data:0006
 csfasta:
 - EDAM_format:1929
@@ -300,19 +307,19 @@ gemini.sqlite:
 genbank:
 - EDAM_format:1936
 - EDAM_data:1255
-- EDAM_data:0849
 - EDAM_data:0006
+- EDAM_data:0849
 genetrack:
 - EDAM_format:2919
 - EDAM_data:3002
 gff:
 - EDAM_format:2305
-- EDAM_data:1255
 - EDAM_data:0006
+- EDAM_data:1255
 gff3:
 - EDAM_format:1975
-- EDAM_data:1255
 - EDAM_data:0006
+- EDAM_data:1255
 gg:
 - EDAM_format:3475
 - EDAM_data:0006
@@ -324,8 +331,8 @@ gmaj.zip:
 - EDAM_data:2968
 gtf:
 - EDAM_format:2306
-- EDAM_data:1255
 - EDAM_data:0006
+- EDAM_data:1255
 h5:
 - EDAM_format:2333
 - EDAM_data:0006
@@ -411,8 +418,8 @@ lped:
 maf:
 - EDAM_format:3008
 - EDAM_data:3002
-- EDAM_data:0006
 - EDAM_data:0863
+- EDAM_data:0006
 mafcustomtrack:
 - EDAM_format:2330
 - EDAM_data:0006
@@ -496,8 +503,8 @@ newcpgseek:
 - EDAM_data:0006
 nex:
 - EDAM_format:1912
-- EDAM_data:0872
 - EDAM_data:0006
+- EDAM_data:0872
 nexus:
 - EDAM_format:2330
 - EDAM_data:0006
@@ -506,8 +513,8 @@ nexusnon:
 - EDAM_data:0006
 nhx:
 - EDAM_format:1910
-- EDAM_data:0872
 - EDAM_data:0006
+- EDAM_data:0872
 noreturn:
 - EDAM_format:2330
 - EDAM_data:0006
@@ -830,6 +837,9 @@ twobit:
 - EDAM_data:0006
 txt:
 - EDAM_format:2330
+- EDAM_data:0006
+uniprotxml:
+- EDAM_format:2332
 - EDAM_data:0006
 vcf:
 - EDAM_format:3016
