new template XML and verification schema with xsd

--- a/data/regate.ini
+++ b/data/regate.ini
@@ -19,15 +19,22 @@ ressourcename =
 pushtoelixir = False
 # import all XML to ELIXIR bioregistry of an already exist specified directory
 onlypush = False
+# bioregistry url
+bioregistry_host = https://bio.tool
 # registry login required if pushtoelixir and onlypush are True
 login =
+# Disable HTTPS verification warnings from urllib3
+ssl_verify = False
+# Specify if tools must be Private or Public when you will push them on the ELIXIR bioregistry
+private = True
 # directory to store the tool json
 tool_dir =
 # yaml file generated with remag.py
 yaml_file =
-
 #XML template for ELIXIR registry
 #xmltemplate =
+#XSD biotools
+#xsdbiotools =
 
 [remag_specific_section]
 # edam owl file to create
