--- a/data/regate.ini
+++ b/data/regate.ini
@@ -13,6 +13,10 @@ contactName =
 contactEmail =
 # Ressource Name
 ressourcename =
+# Prefix for biotools file name 
+prefix_toolname = 
+# Suffix for biotools file name
+suffix_toolname = 
 
 [regate_specific_section]
 # import all XML to ELIXIR bioregistry
