remove suffix value from regate.ini

--- a/data/regate.ini
+++ b/data/regate.ini
@@ -32,7 +32,7 @@ tool_dir = tool_dir_regatebiotools
 # prefix toolname
 prefix_toolname = 
 # suffix toolname
-suffix_toolname = suffix
+suffix_toolname = 
 # yaml file generated with remag.py
 yaml_file = data/yaml_mapping.yaml
 #XML template for ELIXIR registry
