--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
 include README.md
+include regate/data/yaml_mapping.yaml
+include regate/data/regate.ini
+include regate/data/xmltemplate.tmpl
+include regate/data/biotools.xsd
