--- a/regate/data/regate.ini
+++ b/regate/data/regate.ini
@@ -12,7 +12,7 @@ contactName =
 # Contact Email
 contactEmail =
 # Ressource Name
-ressourcename = 
+resourcename = 
 
 [regate_specific_section]
 # import all XML to ELIXIR bioregistry
