--- a/regate/data/regate.ini
+++ b/regate/data/regate.ini
@@ -16,19 +16,19 @@ ressourcename =
 
 [regate_specific_section]
 # import all XML to ELIXIR bioregistry
-pushtoelixir = 
+pushtoelixir = True
 # import all XML to ELIXIR bioregistry of an already exist specified directory
 onlypush = 
 # bioregistry url
-bioregistry_host = 
+bioregistry_host = https://bio.tools 
 # registry login required if pushtoelixir and onlypush are True
 login = 
 # Disable HTTPS verification warnings from urllib3
 ssl_verify = False
 # Specify if tools must be Private or Public when you will push them on the ELIXIR bioregistry
-accessibility = 
+accessibility = Public 
 # directory to store the tool json
-tool_dir = 
+tool_dir = regate_tools
 # yaml file generated with remag.py
 yaml_file = data/yaml_mapping.yaml
 #XML template for ELIXIR registry
