upgrade ReGaTE to be compliant with BioToolsSchema 2.0.0
(as available in dev.bio.tools on Dec 4, 2016)

--- a/regate/data/regate.ini
+++ b/regate/data/regate.ini
@@ -25,8 +25,8 @@ bioregistry_host = https://bio.tools
 login = 
 # Disable HTTPS verification warnings from urllib3
 ssl_verify = False
-# Specify if tools must be Private or Public when you will push them on the ELIXIR bioregistry
-accessibility = Public 
+# Specify if tools must be Open access or Restricted access when you will push them on the ELIXIR bioregistry
+accessibility = Open access 
 # directory to store the tool json
 tool_dir = regate_tools
 # yaml file generated with remag.py
