--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: "python setup.py install" 
+script: "python setup.py test && python setup.py install" 
